Reader implementado como Stream